--- a/text2sql/pyproject.toml
+++ b/text2sql/pyproject.toml
@@ -6,7 +6,7 @@ requires = ["setuptools", "setuptools-scm"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "package"
+name = "text2sql"
 version = "0.0.1"
 requires-python = ">=3.12"
 readme = "README.md"
